Add image pack. Create components.

--- a/_backup/www/templates/ru/cat10.html
+++ b/_backup/www/templates/ru/cat10.html
@@ -112,12 +112,12 @@
 
                 <div class="product" onclick="getPopup('subcat9/product2'); return false;">
                     <img src="img/new_img/img-dump-sm-0.png" alt="">
-                    <div class="title">Пельмени  </div>
+                    <div class="title">Пельмени</div>
                     <div class="subtitle"> со свининой и говядиной</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat9/product3'); return false;">
                     <img src="img/new_img/img-dump-sm-1.png" alt="">
-                    <div class="title">Пельмени  </div>
+                    <div class="title">Пельмени</div>
                     <div class="subtitle"> с говядиной</div>
                 </div>
 
@@ -132,6 +132,16 @@
                     <img src="img/new_pack/var_s.png" alt="">
                     <div class="title">Вареники</div>
                     <div class="subtitle">с творогом</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat9/product15'); return false;">
+                    <img src="img/new_pack/var_sm.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">со смородиной</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat9/product16'); return false;">
+                    <img src="img/new_pack/var_kl.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">с клубникой</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat2/product6'); return false;">
                     <img src="img/new_pack/var_kp.png" alt="">
