--- a/_backup/www/templates/ru/cat25.html
+++ b/_backup/www/templates/ru/cat25.html
@@ -104,6 +104,16 @@
                     <div class="title">Вареники   </div>
                     <div class="subtitle">с творогом</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat9/product15'); return false;">
+                    <img src="img/new_pack/var_sm.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">со смородиной</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat9/product16'); return false;">
+                    <img src="img/new_pack/var_kl.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">с клубникой</div>
+                </div>
 				<div class="product" onclick="getPopup('subcat2/product3'); return false;">
 					<img src="img/new_pack/var_kg.png" alt="">
 					<div class="title">Вареники</div>
