--- a/_backup/www/templates/ua/cat10.html
+++ b/_backup/www/templates/ua/cat10.html
@@ -138,6 +138,16 @@
                     <div class="title">Вареники</div>
                     <div class="subtitle">з сиром</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat9/product15'); return false;">
+                    <img src="img/new_pack/var_sm.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">зі смородиною</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat9/product16'); return false;">
+                    <img src="img/new_pack/var_kl.png" alt="">
+                    <div class="title">Вареники</div>
+                    <div class="subtitle">з полуницею</div>
+                </div>
                 <div class="product" onclick="getPopup('subcat2/product6'); return false;">
                     <img src="img/new_pack/var_kp.png" alt="">
                     <div class="title">Вареники</div>
