Replace from RU to UA text description.

--- a/_backup/www/templates/ua/subcat9/product16.html
+++ b/_backup/www/templates/ua/subcat9/product16.html
@@ -8,10 +8,10 @@
     <div class="popupSliderWrapper">
         <div class="liquid-slider" id="ls3">
             <div>
-                <p>Вареники - это изначально украинское блюдо, которое сочетается с разной начинкой. Этими сытными «пирогами» с привычным солено-овощным наполнением уже не удивить современного потребителя.</p>
-                <p>И мы решили, почему бы не попробовать сладкие вареники? Выбрав спелую, сочную, ароматную клубнику, повара ТМ SmaCom создали тестово-фруктовый дуэт.</p>
-                <p>Ягодки – вкус детства, их любят как дети, так и взрослые. Сладкими варениками можно наслаждаться с чаем, кофе или компотом!</p>
-                <p>Выберите свой любимый вкус сладких вареников ТМ SmaCom и окунитесь в уютную атмосферу украинских традиций.</p>
+                <p>Вареники – це споконвічно українська страва, яка смакує з різною начинкою. Цими ситними «пирогами» зі звичним солоно-овочевим наповненням вже не здивувати сучасного споживача.</p>
+                <p>І ми вирішили, чому б не спробувати солодкі вареники? Обравши спілу, соковиту, запашну полуницю, кухарі ТМ SmaCom створили тістово-фруктовий дует.</p>
+                <p>Ягідки – смак дитинства, їх полюбляють як діти, так і дорослі. Солодкими варениками можна насолоджуватися до чаю, кави, або узвару!</p>
+                <p>Оберіть свій улюблений смак солодких вареників ТМ SmaCom та пориньте у затишну атмосферу українських традицій.</p>
             </div>
         </div>
     </div>
@@ -20,9 +20,9 @@
         <div class="consist" onClick="showConsist(this)">Склад продукту</div>
         <div class="consistInside">
             <div class="text">
-                Начинка: клубника 75%, сахар белый, крахмал картофельный.
+                Начинка: полуниця 75%, цукор білий, крохмаль картопляний.
                 <br>
-                Тесто: мука пшеничная в/с, вода питьевая, масло подсолнечное рафинированное дезодорированное, клетчатка пшеничная.
+                Тісто: борошно пшеничне в/г, вода питна, олія соняшникова рафінована дезодорована, клітковина пшенична.
             </div>
             <div class="title">Поживна (харчова) цінність:</div>
             <ul>
