--- a/_backup/www/templates/ru/cat26.html
+++ b/_backup/www/templates/ru/cat26.html
@@ -83,6 +83,11 @@
                     <div class="title">Фирменные пельмени</div>
                     <div class="subtitle">с нежным филе <br>индейки</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat1/product19'); return false;">
+                    <img src="img/new_pack/firmovi3.png" alt="">
+                    <div class="title">Фирменные пельмени</div>
+                    <div class="subtitle">с грибами</div>
+                </div>
 
                 <br>
 
