--- a/_backup/www/templates/ua/cat10.html
+++ b/_backup/www/templates/ua/cat10.html
@@ -84,6 +84,11 @@
                     <div class="title">Фірмові пельмені</div>
                     <div class="subtitle">з ніжним філе <br>індички</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat1/product19'); return false;">
+                    <img src="img/new_pack/firmovi3.png" alt="">
+                    <div class="title">Фірмові пельмені</div>
+                    <div class="subtitle">з грибами</div>
+                </div>
 
                 <br>
 
@@ -322,35 +327,60 @@
 
                 <br>
 
-                <div class="product" onclick="getPopup('subcat3/product10'); return false;">
-                    <img src="img/products/cat3/product_thumb_10.jpg" alt="">
+                <!--<div class="product" onclick="getPopup('subcat3/product10'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_10.jpg" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">з м'ясом</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product12'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_12.jpg" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">з м'ясом курки</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product15'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_15.jpg" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">з сиром та родзинками</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat3/product16'); return false;">-->
+                    <!--<img src="img/products/cat3/product_thumb_16.jpg" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">з сиром</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat7/product17'); return false;">-->
+                    <!--<img src="img/new_pack/product_thumb_17_1.png" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">«Класичні»</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat7/product29'); return false;">-->
+                    <!--<img src="img/products/cat7/product_thumb_17.jpg" alt="">-->
+                    <!--<div class="title">Млинці</div>-->
+                    <!--<div class="subtitle">з яблуками та корицею</div>-->
+                <!--</div>-->
+                <div class="product" onclick="getPopup('subcat25/product1'); return false;">
+                    <img src="img/pancakes/img-pancakes-classic.png" alt="">
                     <div class="title">Млинці</div>
-                    <div class="subtitle">з м'ясом</div>
+                    <div class="subtitle">"Класичні"</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product12'); return false;">
-                    <img src="img/products/cat3/product_thumb_12.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product2'); return false;">
+                    <img src="img/pancakes/img-pancakes-chickenMeat.png" alt="">
                     <div class="title">Млинці</div>
-                    <div class="subtitle">з м'ясом курки</div>
+                    <div class="subtitle">з м’ясом курки</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product15'); return false;">
-                    <img src="img/products/cat3/product_thumb_15.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product3'); return false;">
+                    <img src="img/pancakes/img-pancakes-cottageCheese.png" alt="">
                     <div class="title">Млинці</div>
                     <div class="subtitle">з сиром та родзинками</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat3/product16'); return false;">
-                    <img src="img/products/cat3/product_thumb_16.jpg" alt="">
+                <div class="product" onclick="getPopup('subcat25/product4'); return false;">
+                    <img src="img/pancakes/img-pancakes-strawberry.png" alt="">
                     <div class="title">Млинці</div>
-                    <div class="subtitle">з сиром</div>
+                    <div class="subtitle">з полуницею</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat7/product17'); return false;">
-                    <img src="img/new_pack/product_thumb_17_1.png" alt="">
+                <div class="product" onclick="getPopup('subcat25/product5'); return false;">
+                    <img src="img/pancakes/img-pancakes-apricot.png" alt="">
                     <div class="title">Млинці</div>
-                    <div class="subtitle">«Класичні»</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat7/product29'); return false;">
-                    <img src="img/products/cat7/product_thumb_17.jpg" alt="">
-                    <div class="title">Млинці</div>
-                    <div class="subtitle">з яблуками та корицею</div>
+                    <div class="subtitle">з абрикосами</div>
                 </div>
 
                 <br>
