--- a/_backup/www/templates/ua/cat23.html
+++ b/_backup/www/templates/ua/cat23.html
@@ -36,9 +36,9 @@
             </div>
 
             <div class="subcat roundAnimation">
-                <img src="../../img/product_thumb_3.png" alt="">
-                <div onclick="renderInnerPage(this, 'cat', 27);" class="hoverBox">
-                    <a href="" class="more" onClick="return false;">млинці</a>
+                <img src="img/product_thumb_20.png" alt="">
+                <div onclick="return false;" class="hoverBox">
+                    <a href="" class="more" onClick="return false;">бульмені</a>
                 </div>
             </div>
 
@@ -74,6 +74,9 @@
                 </div>
                 <div onclick="renderInnerPage(this, 'cat', 36);" class="more__pop more__pop-7">
                     <a href="" class="more__pop-btn" onclick="return false;">пиріжки</a>
+                </div>
+                <div onclick="renderInnerPage(this, 'cat', 38);" class="more__pop more__pop-8">
+                    <a href="" class="more__pop-btn" onclick="return false;">млинці</a>
                 </div>
             </div>
 
