--- a/_backup/www/templates/ua/cat26.html
+++ b/_backup/www/templates/ua/cat26.html
@@ -89,6 +89,11 @@
                     <div class="title">Фірмові пельмені</div>
                     <div class="subtitle">з ніжним філе <br>індички</div>
                 </div>
+                <div class="product" onclick="getPopup('subcat1/product19'); return false;">
+                    <img src="img/new_pack/firmovi3.png" alt="">
+                    <div class="title">Фірмові пельмені</div>
+                    <div class="subtitle">з грибами</div>
+                </div>
 
                 <br>
 
