--- a/_backup/www/templates/ru/cat10.html
+++ b/_backup/www/templates/ru/cat10.html
@@ -395,6 +395,24 @@
                     <div class="title">Тесто</div>
                     <div class="subtitle">слоено-дрожжевое</div>
                 </div>
+
+                <br>
+
+                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
+                    <img src="img/test-bul.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">из филе индейки</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
+                    <img src="img/test-bul.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">со свининой и говядиной</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
+                    <img src="img/test-bul.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">с говядиной</div>
+                </div>
             </div>
         </div>
     </div>
