Replace pop image for pancakes. Change bg image.

--- a/_backup/www/templates/ru/cat38.html
+++ b/_backup/www/templates/ru/cat38.html
@@ -27,7 +27,7 @@
             <center><a href="" class="more" onClick="showHidden(this,'hidden13'); return false;">подробнее</a></center>
         </div>
         <div class="bannerInside">
-            <img class="" src="img/banners_inner/banner3.jpg" alt="">
+            <img class="" src="img/banners_inner/banner3_mod.png" alt="">
         </div>
     </div>
     <div class="borderUp2"></div>
