Firmovi part - add new pack.

--- a/_backup/www/templates/ru/cat8.html
+++ b/_backup/www/templates/ru/cat8.html
@@ -58,6 +58,11 @@
 					<div class="title">Фирменные пельмени</div>
 					<div class="subtitle">с нежным филе <br>индейки</div>
 				</div>
+				<div class="product" onclick="getPopup('subcat1/product19'); return false;">
+					<img src="img/new_pack/firmovi3.png" alt="">
+					<div class="title">Фирменные пельмени</div>
+					<div class="subtitle">с грибами</div>
+				</div>
 
 <!--				<div class="product" onclick="getPopup('subcat8/product1'); return false;">
 					<img src="img/products/cat8/product_thumb_1.jpg" alt="">
