--- a/_backup/www/templates/ua/cat8.html
+++ b/_backup/www/templates/ua/cat8.html
@@ -58,6 +58,11 @@
 					<div class="title">Фірмові пельмені</div>
 					<div class="subtitle">з ніжним філе <br>індички</div>
 				</div>
+				<div class="product" onclick="getPopup('subcat1/product19'); return false;">
+					<img src="img/new_pack/firmovi3.png" alt="">
+					<div class="title">Фірмові пельмені</div>
+					<div class="subtitle">з грибами</div>
+				</div>
 <!--				<div class="product" onclick="getPopup('subcat8/product1'); return false;">
 					<img src="img/products/cat8/product_thumb_1.jpg" alt="">
 					<div class="title">Пельмені</div>
