--- a/_backup/www/templates/ru/cat39.html
+++ b/_backup/www/templates/ru/cat39.html
@@ -4,7 +4,9 @@
         <div class="middle narrow">
             <h1><img src="img/text-img/bylmen-ru.png" alt=""></h1>
             <div class="desc">
-                <p>...</p>
+                <p>
+                    Это сочетание эксцентричного вкуса, необычной формы продукта и современного дизайна.
+                </p>
             </div>
         </div>
         <div class="middle">
@@ -12,14 +14,12 @@
                 <div class="twoCols">
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Перед бульменямы невозможно устоять! Внутри маленьких круглых бульменив скрытый безумный бум гастрономического вкуса!</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Секрет бульменив раскрывается во время приготовления, в процессе которого мясо выделяет сочный бульон.</p>
                         </div>
                     </div>
                 </div>
