--- a/_backup/www/templates/ua/cat39.html
+++ b/_backup/www/templates/ua/cat39.html
@@ -4,7 +4,9 @@
         <div class="middle narrow">
             <h1><img src="img/text-img/bylmen-ua.png" alt=""></h1>
             <div class="desc">
-                <p>...</p>
+                <p>
+                    Це поєднання ексцентричного смаку, незвичної форми продукту та сучасного дизайну.
+                </p>
             </div>
         </div>
         <div class="middle">
@@ -12,14 +14,12 @@
                 <div class="twoCols">
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Перед бульменями неможливо встояти! Всередині маленьких круглих бульменів схований шалений бум гастрономічного смаку!</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Секрет бульменів розкривається під час приготування, в процесі якого м’ясо виділяє соковитий бульйон.</p>
                         </div>
                     </div>
                 </div>
