Add new images, del social icons - replace link fb.

--- a/_backup/www/templates/ru/cat40.html
+++ b/_backup/www/templates/ru/cat40.html
@@ -36,12 +36,12 @@
             <div class="products">
 
                 <div class="product" onclick="getPopup('subcat27/product1'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/chevpizza/chevpizza-classic.png" alt="">
                     <div class="title">Чевупицца</div>
                     <div class="subtitle"></div>
                 </div>
                 <div class="product" onclick="getPopup('subcat27/product2'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/chevpizza/chevpizza-cheese.png" alt="">
                     <div class="title">Чевупицца</div>
                     <div class="subtitle">с сыром</div>
                 </div>
