--- a/_backup/www/templates/ua/cat40.html
+++ b/_backup/www/templates/ua/cat40.html
@@ -4,7 +4,9 @@
         <div class="middle narrow">
             <h1><img src="img/text-img/chevpizza-ua.png" alt=""></h1>
             <div class="desc">
-                <p></p>
+                <p>
+                    Чевупіца – новий формат піци!
+                </p>
             </div>
         </div>
         <div class="middle">
@@ -12,14 +14,14 @@
                 <div class="twoCols">
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Якщо шукаєте особливий смак в гастрономії, то вам до нас! ТМ SmaCom – це поєднання вишуканості, унікальності, якості і доступної ціни.</p>
+                            <p class="small">ТМ SmaCom виходить за рамки шаблонності, щоб приносити споживачам справжнє задоволення від їжі.</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="colInner">
-                            <p class="small"></p>
-                            <p class="small"></p>
+                            <p class="small">Представляємо нову страву – чевупіццу і чевупіццу з сиром. Зовні – це звичний чебурек, який ми наповнили апетитною сирно-ковбасною начинкою.</p>
+                            <p class="small">Заморожений напівфабрикат зберігається при температурі не вище мінус 18 ° С не більше 6 місяців.</p>
                         </div>
                     </div>
                 </div>
@@ -36,12 +38,12 @@
             <div class="products">
 
                 <div class="product" onclick="getPopup('subcat27/product1'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/chevpizza/chevpizza-classic.png" alt="">
                     <div class="title">Чевупіца</div>
                     <div class="subtitle"></div>
                 </div>
                 <div class="product" onclick="getPopup('subcat27/product2'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/chevpizza/chevpizza-cheese.png" alt="">
                     <div class="title">Чевупіца</div>
                     <div class="subtitle">з сиром</div>
                 </div>
