--- a/_backup/www/templates/ua/subcat27/product2.html
+++ b/_backup/www/templates/ua/subcat27/product2.html
@@ -4,13 +4,17 @@
 </div>
 <div class="borderDown"></div>
 <div class="popupContent">
-	<div class="PopupImageContainer"><img class="productPopupImage" src="" alt=""></div>
+	<div class="PopupImageContainer"><img class="productPopupImage" src="img/chevpizza/chevpizza-cheese-pop.png" alt=""></div>
 
 
 	<div class="popupSliderWrapper">
 		<div class="liquid-slider" id="ls3">
 			<div>
-				<p></p>
+				<p>Ми дотримуємося думки, що їжа повинна бути не тільки смачна, ситна, але і своїм виглядом викликати почуття апетиту.</p>
+				<p>Портфель ТМ SmaCom поповнився новою унікальною готовою стравою – чевупіцою з сиром.</p>
+				<p>Чевупіца з сиром – це комбінація слів «чебурек» і «піца». Ми зберегли форму чебурека і замінили м'ясну начинку на сир.</p>
+				<p>Смак чевупіци нагадує корж з сиром, що споконвіку вважається кавказькою стравою. До начинки ми додали кріп і отримали не тільки ароматну, смачну, але і корисну страву.</p>
+				<p>Чевупіца повністю готова до вживання.</p>
 			</div>
 		</div>
 	</div>
@@ -19,17 +23,19 @@
 		<div class="consist" onClick="showConsist(this)">Склад продукту</div>
 		<div class="consistInside">
 			<div class="text">
-
+				Тісто: борошно пшеничне в/ґ, вода питна, олія соняшникова рафінована дезодорована, сіль кухонна, цукор білий, оцтова кислота.
+				<br>
+				Начинка: сир кисломолочний 81%, сир "Моцарелла" 10% (молоко коров’яче, сіль кухонна, хлористий кальцій, молокозсідальний ферментний препарат, закваска молочнокислих бактерій), вода питна, кріп свіжий, сіль кухонна.
 			</div>
 			<div class="title">Поживна (харчова) цінність:</div>
 			<ul>
-				<li>білки<span>8,9 г</span></li>
-				<li>жири<span>10,3 г</span></li>
-				<li>вуглеводи<span>25,4 г</span></li>
+				<li>білки<span>11,8 г</span></li>
+				<li>жири<span>14,1 г</span></li>
+				<li>вуглеводи<span>27,4 г</span></li>
 			</ul>
 			<div class="title"> Енергетична цінність (калорійність) 100 г продукту:</div>
 			<ul>
-				<li><span></span></li>
+				<li><span>1187,0 кДж / 283,7 ккал.</span></li>
 			</ul>
 			<div class="title">Маса нетто и фасування:</div>
 			<ul>
