--- a/_backup/www/templates/ua/subcat26/product3.html
+++ b/_backup/www/templates/ua/subcat26/product3.html
@@ -4,7 +4,7 @@
 </div>
 <div class="borderDown"></div>
 <div class="popupContent">
-	<div class="PopupImageContainer"><img class="productPopupImage" src="" alt=""></div>
+	<div class="PopupImageContainer"><img class="productPopupImage" src="img/bull/bull-pop.png" alt=""></div>
 
 
 	<div class="popupSliderWrapper">
