--- a/_backup/www/templates/en/cat26.html
+++ b/_backup/www/templates/en/cat26.html
@@ -114,24 +114,24 @@
                     <div class="subtitle">caucasus</div>
                 </div>
 
-                <br>
+                <!--<br>-->
 
-                <div class="product brandName">
-                    <img src="img/cat_doy-pack.jpg" alt="">
-                    <div class="title">&nbsp;</div>
-                    <div class="subtitle">&nbsp;</div>
-                </div>
+                <!--<div class="product brandName">-->
+                    <!--<img src="img/cat_doy-pack.jpg" alt="">-->
+                    <!--<div class="title">&nbsp;</div>-->
+                    <!--<div class="subtitle">&nbsp;</div>-->
+                <!--</div>-->
 
-                <div class="product" onclick="getPopup('subcat9/product2'); return false;">
-                    <img src="img/new_img/img-dump-sm-0.png" alt="">
-                    <div class="title">Meat dumplings</div>
-                    <div class="subtitle"> with pork and beef</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat9/product3'); return false;">
-                    <img src="img/new_img/img-dump-sm-1.png" alt="">
-                    <div class="title">Meat dumplings</div>
-                    <div class="subtitle"> with beef</div>
-                </div>
+                <!--<div class="product" onclick="getPopup('subcat9/product2'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-0.png" alt="">-->
+                    <!--<div class="title">Meat dumplings</div>-->
+                    <!--<div class="subtitle"> with pork and beef</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat9/product3'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-1.png" alt="">-->
+                    <!--<div class="title">Meat dumplings</div>-->
+                    <!--<div class="subtitle"> with beef</div>-->
+                <!--</div>-->
 
                 <br>
 
