--- a/_backup/www/templates/ru/cat26.html
+++ b/_backup/www/templates/ru/cat26.html
@@ -112,23 +112,23 @@
                     <div class="subtitle">по-кавказски</div>
                 </div>
 
-                <br>
+                <!--<br>-->
 
-                <div class="product brandName">
-                    <img src="img/cat_doy-pack.jpg" alt="">
-                    <div class="title">&nbsp;</div>
-                    <div class="subtitle">&nbsp;</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat9/product2'); return false;">
-                    <img src="img/new_img/img-dump-sm-0.png" alt="">
-                    <div class="title">Пельмени</div>
-                    <div class="subtitle"> со свининой и говядиной</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat9/product3'); return false;">
-                    <img src="img/new_img/img-dump-sm-1.png" alt="">
-                    <div class="title">Пельмени</div>
-                    <div class="subtitle"> с говядиной</div>
-                </div>
+                <!--<div class="product brandName">-->
+                    <!--<img src="img/cat_doy-pack.jpg" alt="">-->
+                    <!--<div class="title">&nbsp;</div>-->
+                    <!--<div class="subtitle">&nbsp;</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat9/product2'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-0.png" alt="">-->
+                    <!--<div class="title">Пельмени</div>-->
+                    <!--<div class="subtitle"> со свининой и говядиной</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat9/product3'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-1.png" alt="">-->
+                    <!--<div class="title">Пельмени</div>-->
+                    <!--<div class="subtitle"> с говядиной</div>-->
+                <!--</div>-->
 
                 <br>
 
