--- a/_backup/www/templates/ua/cat26.html
+++ b/_backup/www/templates/ua/cat26.html
@@ -118,23 +118,23 @@
                     <div class="subtitle">по-кавказьки</div>
                 </div>
 
-                <br>
+                <!--<br>-->
 
-                <div class="product brandName">
-                    <img src="img/cat_doy-pack.jpg" alt="">
-                    <div class="title">&nbsp;</div>
-                    <div class="subtitle">&nbsp;</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat9/product2'); return false;">
-                    <img src="img/new_img/img-dump-sm-0.png" alt="">
-                    <div class="title">Пельмені</div>
-                    <div class="subtitle"> зі свининою та яловичиною</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat9/product3'); return false;">
-                    <img src="img/new_img/img-dump-sm-1.png" alt="">
-                    <div class="title">Пельмені</div>
-                    <div class="subtitle"> з яловичиною</div>
-                </div>
+                <!--<div class="product brandName">-->
+                    <!--<img src="img/cat_doy-pack.jpg" alt="">-->
+                    <!--<div class="title">&nbsp;</div>-->
+                    <!--<div class="subtitle">&nbsp;</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat9/product2'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-0.png" alt="">-->
+                    <!--<div class="title">Пельмені</div>-->
+                    <!--<div class="subtitle"> зі свининою та яловичиною</div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat9/product3'); return false;">-->
+                    <!--<img src="img/new_img/img-dump-sm-1.png" alt="">-->
+                    <!--<div class="title">Пельмені</div>-->
+                    <!--<div class="subtitle"> з яловичиною</div>-->
+                <!--</div>-->
 
                 <br>
 
