--- a/_backup/www/templates/ua/cat10.html
+++ b/_backup/www/templates/ua/cat10.html
@@ -399,17 +399,17 @@
                 <br>
 
                 <div class="product" onclick="getPopup('subcat26/product1'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-turkey.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">з філе індички</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat26/product2'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-beefAnd.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">зі свининою та яловичиною</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat26/product3'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-beef.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">з яловичиною</div>
                 </div>
