--- a/_backup/www/templates/ua/cat39.html
+++ b/_backup/www/templates/ua/cat39.html
@@ -32,28 +32,28 @@
     </div>
     <div class="borderUp2"></div>
     <div class="cat inside" id="cat5_products">
-        <!--<div class="animationGroup">-->
-            <!--<div class="object_left" style="top:-100px;"><img src="img/cat_inside_1_object_left_1.png" alt=""></div>-->
-            <!--<div class="object_right" style="top:150px;"><img src="img/cat_inside_1_object_right_1.png" alt=""></div>-->
-            <!--<div class="object_left" style="top:430px;"><img src="img/cat_inside_1_object_left_2.png" alt=""></div>-->
-            <!--<div class="object_right" style="top:550px;"><img src="img/cat_inside_1_object_right_2.png" alt=""></div>-->
-            <!--<div class="object_left" style="top:900px;"><img src="img/cat_inside_1_object_left_3.png" alt=""></div>-->
-        <!--</div>-->
+        <div class="animationGroup">
+            <div class="object_left" style="top:-100px;"><img src="img/cat_inside_1_object_left_1.png" alt=""></div>
+            <div class="object_right" style="top:150px;"><img src="img/cat_inside_1_object_right_1.png" alt=""></div>
+            <div class="object_left" style="top:430px;"><img src="img/cat_inside_1_object_left_2.png" alt=""></div>
+            <div class="object_right" style="top:550px;"><img src="img/cat_inside_1_object_right_2.png" alt=""></div>
+            <div class="object_left" style="top:900px;"><img src="img/cat_inside_1_object_left_3.png" alt=""></div>
+        </div>
         <div class="middle">
             <div class="products">
 
                 <div class="product" onclick="getPopup('subcat26/product1'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-turkey.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">з філе індички</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat26/product2'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-beefAnd.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">зі свининою та яловичиною</div>
                 </div>
                 <div class="product" onclick="getPopup('subcat26/product3'); return false;">
-                    <img src="img/test-bul.png" alt="">
+                    <img src="img/bull/bull-beef.png" alt="">
                     <div class="title">Бульмені</div>
                     <div class="subtitle">з яловичиною</div>
                 </div>
