Small change pack and products: bull, chev - replace img preview.

--- a/_backup/www/templates/ru/cat10.html
+++ b/_backup/www/templates/ru/cat10.html
@@ -46,6 +46,25 @@
         </div>
         <div class="middle">
             <div class="products">
+
+                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
+                    <img src="img/bull/bull-turkey.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">из филе индейки</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
+                    <img src="img/bull/bull-beefAnd.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">со свининой и говядиной</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
+                    <img src="img/bull/bull-beef.png" alt="">
+                    <div class="title">Бульмени</div>
+                    <div class="subtitle">с говядиной</div>
+                </div>
+
+                <br>
+
                 <div class="product" onclick="getPopup('subcat1/product14'); return false;">
                     <img src="img/mother/img-dumpling-beef.png" alt="">
                     <div class="title">Пельмени</div>
@@ -398,21 +417,17 @@
 
                 <br>
 
-                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
-                    <img src="img/bull/bull-turkey.png" alt="">
-                    <div class="title">Бульмени</div>
-                    <div class="subtitle">из филе индейки</div>
+                <div class="product" onclick="getPopup('subcat27/product1'); return false;">
+                    <img src="img/chevpizza/chevpizza-classic.png" alt="">
+                    <div class="title">Чевупицца</div>
+                    <div class="subtitle"></div>
                 </div>
-                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
-                    <img src="img/bull/bull-beefAnd.png" alt="">
-                    <div class="title">Бульмени</div>
-                    <div class="subtitle">со свининой и говядиной</div>
+                <div class="product" onclick="getPopup('subcat27/product2'); return false;">
+                    <img src="img/chevpizza/chevpizza-cheese.png" alt="">
+                    <div class="title">Чевупицца</div>
+                    <div class="subtitle">с сыром</div>
                 </div>
-                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
-                    <img src="img/bull/bull-beef.png" alt="">
-                    <div class="title">Бульмени</div>
-                    <div class="subtitle">с говядиной</div>
-                </div>
+
             </div>
         </div>
     </div>
