--- a/_backup/www/templates/ua/cat10.html
+++ b/_backup/www/templates/ua/cat10.html
@@ -46,6 +46,25 @@
         </div>
         <div class="middle">
             <div class="products">
+
+                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
+                    <img src="img/bull/bull-turkey.png" alt="">
+                    <div class="title">Бульмені</div>
+                    <div class="subtitle">з філе індички</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
+                    <img src="img/bull/bull-beefAnd.png" alt="">
+                    <div class="title">Бульмені</div>
+                    <div class="subtitle">зі свининою та яловичиною</div>
+                </div>
+                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
+                    <img src="img/bull/bull-beef.png" alt="">
+                    <div class="title">Бульмені</div>
+                    <div class="subtitle">з яловичиною</div>
+                </div>
+
+                <br>
+
                 <div class="product" onclick="getPopup('subcat1/product14'); return false;">
                     <img src="img/mother/img-dumpling-beef.png" alt="">
                     <div class="title">Пельмені</div>
@@ -398,20 +417,15 @@
 
                 <br>
 
-                <div class="product" onclick="getPopup('subcat26/product1'); return false;">
-                    <img src="img/bull/bull-turkey.png" alt="">
-                    <div class="title">Бульмені</div>
-                    <div class="subtitle">з філе індички</div>
+                <div class="product" onclick="getPopup('subcat27/product1'); return false;">
+                    <img src="img/chevpizza/chevpizza-classic.png" alt="">
+                    <div class="title">Чевупіца</div>
+                    <div class="subtitle"></div>
                 </div>
-                <div class="product" onclick="getPopup('subcat26/product2'); return false;">
-                    <img src="img/bull/bull-beefAnd.png" alt="">
-                    <div class="title">Бульмені</div>
-                    <div class="subtitle">зі свининою та яловичиною</div>
-                </div>
-                <div class="product" onclick="getPopup('subcat26/product3'); return false;">
-                    <img src="img/bull/bull-beef.png" alt="">
-                    <div class="title">Бульмені</div>
-                    <div class="subtitle">з яловичиною</div>
+                <div class="product" onclick="getPopup('subcat27/product2'); return false;">
+                    <img src="img/chevpizza/chevpizza-cheese.png" alt="">
+                    <div class="title">Чевупіца</div>
+                    <div class="subtitle">з сиром</div>
                 </div>
             </div>
         </div>
