--- a/_backup/www/templates/ru/cat10.html
+++ b/_backup/www/templates/ru/cat10.html
@@ -417,16 +417,16 @@
 
                 <br>
 
-                <div class="product" onclick="getPopup('subcat27/product1'); return false;">
-                    <img src="img/chevpizza/chevpizza-classic.png" alt="">
-                    <div class="title">Чевупицца</div>
-                    <div class="subtitle"></div>
-                </div>
-                <div class="product" onclick="getPopup('subcat27/product2'); return false;">
-                    <img src="img/chevpizza/chevpizza-cheese.png" alt="">
-                    <div class="title">Чевупицца</div>
-                    <div class="subtitle">с сыром</div>
-                </div>
+                <!--<div class="product" onclick="getPopup('subcat27/product1'); return false;">-->
+                    <!--<img src="img/chevpizza/chevpizza-classic.png" alt="">-->
+                    <!--<div class="title">Чевупицца</div>-->
+                    <!--<div class="subtitle"></div>-->
+                <!--</div>-->
+                <!--<div class="product" onclick="getPopup('subcat27/product2'); return false;">-->
+                    <!--<img src="img/chevpizza/chevpizza-cheese.png" alt="">-->
+                    <!--<div class="title">Чевупицца</div>-->
+                    <!--<div class="subtitle">с сыром</div>-->
+                <!--</div>-->
 
             </div>
         </div>
